api-middleware, ducks pattern, firebase WIP

--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,17 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyA8hpHFcM1ARUq5JBObymEUlIzZj1GpYEM",
+        authDomain: "subscript-cfd5d.firebaseapp.com",
+        databaseURL: "https://subscript-cfd5d.firebaseio.com",
+        storageBucket: "subscript-cfd5d.appspot.com",
+        messagingSenderId: "455690313086"
+      };
+      firebase.initializeApp(config);
+    </script>
   </body>
 </html>
